package org.example.models;

public class Burger extends Item {

    @Override
    public String getTypeName() {
        return "Burger";
    }
}
