package org.example.models;

public class Pizza extends Item {

    @Override
    public String getTypeName() {
        return "Pizza";
    }
}
